quick fix for broken styling on mobile
pushed a broken fix this morning :(

--- a/client/src/styles/Modal/Modal.scss
+++ b/client/src/styles/Modal/Modal.scss
@@ -19,7 +19,7 @@
   background-color: #ebebeb;
   margin: auto;
   padding: 20px 50px;
-  height: 40vh;
+  height: 60vh;
   border: 1px solid #888;
   @media (min-width: 600px) {
     width: 80%;
